<resources>
    <string name="app_name">船员人脸识别</string>
    <string name="authority">MyFileProvider</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_skip_button">Skip</string>

    <string name="core_func">核心功能</string>

    <string name="main_vision_button">手机、平板</string>
    <string name="main_glass_button">外置眼镜</string>

    <string name="vision_list_image_classification_button">Image Classification</string>
    <string name="image_classification_title">Image Classification</string>
    <string name="image_classification_results_header_row_name">Classification</string>
    <string name="image_classification_results_header_row_score">Score</string>
    <!--<<<<<<< Updated upstream-->
    <!--    <string name="face_recognition_title">识别中</string>-->
    <!--=======-->
    <string name="face_recognition_title">识别中...</string>
    <!--&gt;>>>>>> Stashed changes-->
    <!--    <string name="image_classification_results_header_row_name">Classification</string>-->
    <!--    <string name="image_classification_results_header_row_score">Score</string>-->
    <string name="text_classification">Text Classification</string>

    <string name="welcome_page_title">Welcome</string>
    <string name="welcome_page_description">PyTorch mobile demo application</string>

    <string name="welcome_page_image_classification_title">Image Classification</string>
    <string name="welcome_page_image_classification_description">Image classification examples run packaged inside app models using output of camera</string>

    <string name="welcome_page_nlp_title">Text Classification</string>
    <string name="welcome_page_nlp_description">Text classification examples run packaged inside app models on user entered text</string>

    <string name="vision_card_qmobilenet_title">Image Classification\nQuantized MobileNetV2</string>
    <string name="vision_card_qmobilenet_description">Inference in int8.\nInput is float32 tensor of 1x3x224x224 shape</string>

    <string name="vision_card_resnet_title">Image Classification\nResnet18</string>
    <string name="vision_card_resnet_description">Default TorchVision pretrained Resnet18 model. Input is float32 tensor of 1x3x224x224 shape</string>

    <string name="vision_card_face_recognition_title">本地识别</string>
    <string name="vision_card_face_recognition_description">使用下载数据包进行的本地人脸检测识别，识别速度较慢，但是延迟低</string>

    <string name="vision_card_face_recognition_remote_title">远程识别</string>
    <string name="vision_card_face_recognition_remote_description">将视频rtmp推流到服务器上的远程识别，识别速度快，但是延迟较高</string>

    <string name="vision_card_face_recognition_glass_local_title">使用眼镜的本地识别</string>
    <string name="vision_card_face_recognition_glass_local_description">使用下载数据包进行的本地人脸检测识别，识别速度较慢，但是延迟低</string>

    <string name="vision_card_face_recognition_glass_remote_title">使用眼镜的远程识别</string>
    <string name="vision_card_face_recognition_glass_remote_description">将视频rtmp推流到服务器上的远程识别，识别速度快，但是延迟较高</string>

    <string name="nlp_card_lstm_title">Text Classification.\nLSTM model trained on Reddit comments dataset. </string>
    <string name="nlp_card_lstm_description">Predicts subreddit by given comment.\nInput is uint8 1xN shaped tensor, where N is the length of text\'s bytes representation in utf-8 encoding. Output classes are subreddits.</string>
    <string name="clear">Clear</string>
    <string name="text_classification_topic">Topic</string>
    <string name="text_classification_score">Score</string>
    <string name="error_dialog_text">Sorry there was an error.</string>
    <string name="text_classification_edittext_hint">Something like a reddit comment...</string>
    <string name="title_activity_select_datagram">SelectDatagram</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_select_face_datagram">SelectFaceDatagram</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="face_of_attention">中心人脸</string>
    <string name="prediction">识别结果</string>
    <!--    丁豪添加-->
    <string name="navigation_bar">导航栏</string>
    <string name="Setup">设置</string>
    <string name="title_activity_glass_local">GlassLocalActivity</string>
    <string name="title_activity_select_videos">选择视频文件</string>
    <string name="title_activity_add_new_crew">AddNewCrew</string>
    <string name="title_activity_set_face_login">SetFaceLogin</string>
    <string name="title_activity_select_crew">SelectCrew</string>

    <string name="account">请输入登录的账号</string>
    <string name="password">请输入登录密码</string>
    <string name="check_password">记住密码</string>
    <string name="check_login">自动登录</string>
    <string name="login">登录</string>
    <string name="loading">正在加载数据</string>
    <string name="forget_password">忘记密码？</string>
    <string name="title_func">功能</string>
    <string name="title_data">数据</string>
    <string name="title_mime">我的</string>
    <string name="title_file">文件</string>
    <string name="func_button">功能按钮</string>

    <string name="local_recog">本地识别</string>
    <string name="remote_recog">远程识别</string>
    <string name="glass_recog">眼镜识别</string>
    <string name="boat_recog">船舶识别检测</string>
    <string name="person_register">人员信息录入</string>
    <string name="auxi_func">辅助功能</string>
    <string name="add_crew">新增船员</string>
    <string name="other_func">其他功能</string>
    <string name="ship_class_detect">船体类型检测</string>
    <string name="shipname_detect">船名检测</string>
    <string name="glass_local_recog">本地识别（使用眼镜）</string>
    <string name="glass_remote_recog">远程识别（使用眼镜）</string>
    <string name="check_crew">查看和更新船员</string>
    <string name="check_local_datagrams">本地数据包文件</string>
    <string name="check_local_videos">查看本地视频文件</string>
    <string name="title_activity_face_detection2">FaceDetectionActivity2</string>
</resources>
